# Rusty-R2

./: .gitignore  LICENSE  README.md  create_dump.py  inference_runtime.py  pyproject.toml  requirements.txt  rusty_terminal.py  train_agentic.py  train_rusty_r2_pipeline.py  train_supervised.py
agent/: env.py  train_agentic.py
docs/: data_sources.md  rusty_r2_upgrade.md
rusty_r2/model/: model_rwkv.py
scripts/: download_datasets.py  list_datasets.py  rebuild_tokenizer.py
tasks/sum_list/: prompt.txt  template.py  tests.py
tests/: test_checkpoint_roundtrip.py  test_protocol_sandbox.py  test_r2_equivalence.py  test_tokenizer_specials.py
utils/: checkpoint.py  rl.py
